--- a/.gitignore
+++ b/.gitignore
@@ -196,7 +196,7 @@ thumb
 sketch
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
